# deepsad_trainer

./: .gitignore  CLAUDE.md  add_threshold.py  app.py  common.py  config.py  lenet_test.py  lenet_train.py  main.py  pyproject.toml  tb_logger.py  test.py  train.py
configs/: test.yaml  train.yaml
docs/: SPEC.md  TEST.md  TRAINING.md
tests/: make_cifar_dataset.py  test.py  train.py
